cambio 2.0 en todos los archivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<body>
 		<h1>Este es un encabezado</h1>
 		<h2>Este es un encabezado</h2>	
-	
+		<h2>Este es un encabezado</h2>	
+		<h2>Este es un encabezado</h2>	
+		<h2>Este es un encabezado</h2>	
 		
 	</body>
 </html>
