--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h2>Este es un encabezado</h2>	
 		<h2>Este es un encabezado</h2>	
 		<h2>Este es un encabezado</h2>	
-		<h2>Este es un encabezado</h2>	
+		<h2>Esteeeeeeeeeeeeeencabezado</h2>	
 		
 	</body>
 </html>
